--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,46 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-  <h1>Stage 4 - Exercício 01</h1>
-  
 
-  <h2>Calculo de aritmética básica</h2>
+  <main>
+    <h1>Stage 4 - Exercício 01</h1>
 
-  <p>
-    + - * /
-  </p>
+    <h2>Calculo aritmética básica</h2>
 
-  <form >
-    <label for="numberOne">Digite um número</label>
-    <input type="number" id="numberOne">
+    <form>
 
-    <label for="numberTwo">Digite outro número</label>
-    <input type="number" id="numberTwo">
+      <label for="opcoes">Digite a opção</label>
+      <select name="opcoes" id="opcoes-conta">
+        
+        <option value=""></option>
+        <option value="adcao">Soma</option>
+        <option value="subtracao">Subtração</option>
+        <option value="divisao">Divisão</option>
+        <option value="multiplicacao">Multiplicação</option>
+      
+      </select>
 
-    <button type="submit">Calcular</button>
-  </form>
+      <label for="numberOne">Digite um número</label>
+      <input type="number" id="numberOne">
+
+      <label for="numberTwo">Digite outro número</label>
+      <input type="number" id="numberTwo">
+
+      <input type="submit"value="enviar" id="enviar">Calcular</button>
+    </form>
+
+      <p class="resultado">
+        Resultado
+      </p>
+
+  </main>
+
 
 
 
   <script type="module" src="./modules/index.js"></script>
 </body>
+
 </html>
