Adicionado a verificação se o número é par ou impar na funções de calculo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <label for="opcoes">Digite a opção</label>
       <select name="opcoes" id="opcoes-conta">
         
-        <option value=""></option>
         <option value="adcao">Soma</option>
         <option value="subtracao">Subtração</option>
         <option value="divisao">Divisão</option>
@@ -30,16 +29,16 @@
       </select>
 
       <label for="numberOne">Digite um número</label>
-      <input type="number" id="numberOne">
+      <input type="number" id="numberOne" />
 
       <label for="numberTwo">Digite outro número</label>
-      <input type="number" id="numberTwo">
+      <input type="number" id="numberTwo" />
 
-      <input type="submit"value="enviar" id="enviar">Calcular</button>
+      <input type="submit"value="enviar" id="enviar" />
     </form>
-
+      <p>Resultado: </p>
       <p class="resultado">
-        Resultado
+        
       </p>
 
   </main>
